Mudanças de personalização da página

--- a/Introdução ao HTML/Arquivos HTML/Aula-1.html
+++ b/Introdução ao HTML/Arquivos HTML/Aula-1.html
@@ -4,40 +4,45 @@
         <meta charset="utf-8">
         <title> Filipe Augusto </title>
     </head>
-    <header>
-        <h1>
-            Página pessoal: Canto do Filipe
-        </h1>
-    </header>
-    <section>
+    <body>
         <header>
-            <h2>
-                Lista de postagens
-            </h2>
+            <img src="https://static.wikia.nocookie.net/dunaemportugues/images/a/a3/Paul.jpg/revision/latest?cb=20200803184152&path-prefix=pt-br" alt="Meu personagem favorito!">
+            <h1>
+                Página pessoal: Canto do Filipe
+            </h1>
         </header>
-        <article>
+        <section>
             <header>
-                <h3>
-                    Teste#1
-                </h3>
+                <h2>
+                    Lista de postagens
+                </h2>
             </header>
+            <article>
+                <header>
+                    <h3>
+                        Teste#1
+                    </h3>
+                    <img src="https://images.unsplash.com/photo-1518773553398-650c184e0bb3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" atl="Código HTML">
+                </header>
+                <p>
+                    At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+                </p>
+            </article>
+        </section>
+        <section>
             <p>
-                At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+                Você pode entrar em contato com Filipe através de suas redes sociais:
             </p>
-        </article>
-    </section>
-    <section>
-        <p>
-            Você pode entrar em contato com Filipe através de suas redes sociais:
-        </p>
-        <ul>
-            <li><a href="https://www.linkedin.com/in/filipe-augusto-silva/">Linkedin</a></li>
-            <li><a href="https://www.instagram.com/f_augustoss/">Instagram</a></li>
-        </ul>
-    </section>
-    <footer>
-        <h6>
-            Para mais informações, contate: <a href="filipea133@gmail.com"> e-mail </a>
-        </h6>
-    </footer>
+            <ul>
+                <li><a href="https://www.linkedin.com/in/filipe-augusto-silva/" target="_blank">Linkedin</a></li>
+                <li><a href="https://www.instagram.com/f_augustoss/" target="_blank">Instagram</a></li>
+                <li><a href="https://github.com/FilipeBaristikk" target="_blanck">GitHub</a></li>
+            </ul>
+        </section>
+        <footer>
+            <h6>
+                Para mais informações, contate: <a href="mailto:filipea133@gmail.com"> e-mail </a>
+            </h6>
+        </footer>
+    </body>
 </html>
