Finalizando seção de Introdução ao HTML

--- a/Introdução ao HTML/Arquivos HTML/Aula-1.html
+++ b/Introdução ao HTML/Arquivos HTML/Aula-1.html
@@ -7,7 +7,7 @@
     </head>
     <body>
         <header>
-            <img src="https://static.wikia.nocookie.net/dunaemportugues/images/a/a3/Paul.jpg/revision/latest?cb=20200803184152&path-prefix=pt-br" alt="Meu personagem favorito!">
+            <img src="https://static.wikia.nocookie.net/dunaemportugues/images/a/a3/Paul.jpg/revision/latest?cb=20200803184152&path-prefix=pt-br" alt="Meu personagem favorito!" class="profile_photo">
             <h1 id="title">
                 Página pessoal: Canto do Filipe
             </h1>
@@ -23,9 +23,9 @@
                     <h3 class="post_title">
                         Teste#1
                     </h3>
-                    <img src="https://images.unsplash.com/photo-1518773553398-650c184e0bb3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" atl="Código HTML">
+                    <img src="https://images.unsplash.com/photo-1518773553398-650c184e0bb3?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" atl="Código HTML" class="post_image">
                 </header>
-                <p>
+                <p class="post_content">
                     At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
                 </p>
             </article>
